# urm-sim

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: debug.rs  instructions.rs  main.rs  parser.rs  simulator.rs  urm.pest
urm-programs/: add.urm  copy.urm
