[package]
name = "urm-sim"
version = "1.0.2"
edition = "2021"
description = "A parser and interpreter for Unlimited Register Machine (URM) programs"
license = "MIT"
repository = "https://github.com/Niklas-Mezynski/urm-sim"
homepage = "https://github.com/Niklas-Mezynski/urm-sim"
documentation = "https://docs.rs/urm-sim"
readme = "README.md"
keywords = ["urm", "interpreter", "simulator", "theoretical-cs", "computation"]
categories = [
    "command-line-utilities",
    "development-tools",
    "parser-implementations",
]

[dependencies]
pest = "2.7.14"
pest_derive = "2.7.14"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = { version = "0.28.1", features = ["events"] }
indexmap = "2.6.0"
